modified main page

--- a/Old_version/index.html
+++ b/Old_version/index.html
@@ -69,10 +69,10 @@
   </tbody>
 </table>
 </div>
-<div class="box inline">
-    <img src="Images/busfor.jpg" alt="banner">
-  </div>
-<table border="0" width="83%" bgcolor="#4169E0" align="right">
+<!--<div class="box inline">
+    <a href="https://busfor.ua/" target="_blank"><img src="Images/busfor.jpg" alt="banner"></a>
+</div>-->
+<table border="0" width="80%" bgcolor="#4169E0" align="center">
 <tr>
   <td width="60%" height="167"><p class="rabot22" style="text-align:left">22% уже </p><br> <p class="rabot22">работают    в </p><br> <p class="rabot22" align="right" style="text-align:right" >Европе</p></td>
   <td align="right" rowspan="2"><img src="Images/de53139eb17d2b4f263cfe4d8930840d_990x360_cr.jpg" width="580" alt=""/></td>
@@ -84,7 +84,7 @@
 
 <br><br>
 
-<table border="0" width="85%" bgcolor="#4169E0" align="right" cellspacing="40px">
+<table border="0" width="85%" bgcolor="#4169E0" align="center" cellspacing="40px">
 <tr bgcolor="white">
     <td height="218" align="center" width="30%"><div><p class="vakan">ВАКАНСИИ ДЛЯ</p>
     <p class="vakan"> МУЖЧИН</p><img src="Images/4e789f527c1ee3dc548d4154079459e9_290x120.jpg" width="160" height="120" alt=""/> <p class="osntext">Работа для здоровых и крепких мужчин в возрасте от 20 до 55 лет, зарплата от 700 $ в месяц (от выработки)</p></div></td>
@@ -94,9 +94,9 @@
    <p class="vakan">СЕМЕЙНЫХ ПАР</p><img src="Images/09f3f083cb9f1451f34e85a9116c65eb_310x120.jpg" width="156" height="120" alt=""/><p class="osntext">Вакансии для семейных пар отличаются готовностью работодателя размещать семью в отдельных комнатах или по две пары.</p></div></td></tr>
 </table>
 
-<hr width="82%" align="right">
+<hr width="80%" align="center">
 
-<table border="0" width="85%" bgcolor="#4169E0" align="right" cellspacing="40px">
+<table border="0" width="85%" height="50px" bgcolor="#4169E0" align="center" cellspacing="40px">
   <tr align="center">
     <td bgcolor="white" width="30%" style="padding-right:10px" class="vert"><div><img src="Images/0072da0c889be29709bb4538294a5640_380x150.jpg" width="307" height="150" alt=""/></div><p style="padding-left:10px"  align="justify" class="osntext">Деятельность компании <strong>ЮК «Инспе»</strong>, полностью согласована с трудовым законодательством Украины, легальность подтверждена лицензией Министерства труда и социальной политики АЕ № 460337. На нашем сайте вы сможете узнать необходимую информацию касательно нашей работы, мы очень надеемся, что она будет полезна вам и наш труд будет оценен вами по достоинству.</p></td>
    
@@ -107,7 +107,25 @@
           <li>бронирование мест на отправку к месту работы;</li>
           <li>инструктаж по организации быта -правила поведения и выдержки из законодательства страны-работодателя;</li>
           <li>особенности национальных традиций, которые нужно знать соискателю</li>
-        </ul></p></div></td>
+        </ul></p></div>
+    </td>
+    <td bgcolor="white" width="30%" class="vert" id="vk" height="300">
+    <div><img src="Images/rabota.jpg" width="307" height="150" alt=""/></div>
+    <p><strong>Вакансии за границей</strong></p>
+    <ul class="vakansii">
+       <li><strong>04.07.16</strong>  Срочно требуются в  г. Ченстахова - фирма работает по всей Польше, на строительство мостов 5 мужчин, желательно с опытом (бетонщики , арматурщики ) . Зарплата от 10 злотых в час в первый месяц, со второго по 11 злотых в час.<br>
+       Жильё частный дом предоставляется бесплатно.<br>
+       Мед. комиссия , техника безопасности и форма одежды за счёт фирмы.<br>
+       Рабочий день с понедельника по субботу по 10-12 часов.</li>
+       <li><strong>01.07.16</strong>Требуются срочно на мясокомбинат в г. ЕЛК разнорабочие (мужчины, женщины, семейные пары).
+        Зарплата 12 злотых в час.
+        2-х разовое питание и довоз до места работы - БЕСПЛАТНО.
+        Жильё предоставлено работодателем по 4-6 человек в комнате (семейные пары живут отдельно).
+        После окончания рабочей визы, фирма делает продление документов. 
+        Рабочая одежда, мед . комиссия и техника безопасности за счёт фирмы.
+        Месторасположение: Польша, г. ЕЛК</li>
+    </ul>
+    </td>
   </tr>
 </table>
 
@@ -127,7 +145,7 @@
  
   Все консультации по телефону 380 63 813 00 02, +380 96 304 56 97,
 ​   +380 99 568 59 44​</p></div>
-<table  width="80%" border="0" align="right">
+<table  width="80%" border="0" align="center">
    <tr><td>
       <hr width="100%" size="1">
       <div align="center"><a href="index.html">Главная </a>&nbsp; &nbsp;
