--- a/Old_version/Обновленный index/index.html
+++ b/Old_version/Обновленный index/index.html
@@ -3,10 +3,58 @@
 <head>
 	<title>Работа в Польше</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<!--#insert file="-header.html"-->
+<header>
+	<div class="img box">
+		<a href="index.html"><img src="Images/d27e680c2f59082727a381f895966131_151x100.png" alt="logo Inspe"></a>
+		<p>Компания<br> "Инспе"</p>
+	</div>
+	<div class="box txt-head">
+		<p>РАБОТА</p>
+        <p>В ЕВРОПЕ ДЛЯ ВАС</p>
+        <p>ЕСТЬ</p>
+	
+	<nav>
+		<ul>
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="https://yadi.sk/d/OH8XJu6kkuJCM" target="_blank">Документы</a></li>
+			<li><a href="O nas.html">О нас</a></li>
+			<li><a href="Contacts.html">Контакты</a></li>
+			<li><a href="Video.html">Видео</a></li>
+		</ul>
+	</nav>
+	</div>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter32994574 = new Ya.Metrika({
+                    id:32994574,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/32994574" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+</header>
 
 <main> 
 	<div class="box inline">
@@ -17,27 +65,27 @@
 		<p>но так и не покидают Украину.</p>
 	</div>
 	<div class="box inline">
-		<img src="/img/banner.jpg" alt="banner">
+		<img src="Images/de53139eb17d2b4f263cfe4d8930840d_990x360_cr.jpg" alt="banner">
 	</div>
 	<div class="opis-vakans box">
 		<div class="vakans box inline">
 			<p id="orang">Вакансии для <br>мужчин</p>
 			<div class="img">
-				<img src="img/4e789f527c1ee3dc548d4154079459e9_290x120.jpg" alt="" class="block">
+				<img src="Images/4e789f527c1ee3dc548d4154079459e9_290x120.jpg" alt="" class="block">
 			</div>
 			<p>Работа для здоровых и крепких мужчин в возрасте от 20 до 55 лет, зарплата от 700 $ в месяц (от выработки)</p>
 		</div>
 		<div class="vakans box">
 			<p id="orang">Вакансии для <br>женщин</p>
 			<div class="img">
-				<img src="img/add8aaa6ea60bbed856b3d0faf9c6201_300x120.jpg">
+				<img src="Images/add8aaa6ea60bbed856b3d0faf9c6201_300x120.jpg">
 			</div>
 			<p>Вакансии для женщин разделяются на возрастные категории: до 45 и от 45 до 60 лет. Зарплаты от 400$ с полным пансионом до 600 $ в месяц.</p>
 		</div>
 		<div class="vakans box">
 			<p id="orang">Вакансии для <br>семейных пар</p>
 			<div class="img">
-				<img src="img/09f3f083cb9f1451f34e85a9116c65eb_310x120.jpg">
+				<img src="Images/09f3f083cb9f1451f34e85a9116c65eb_310x120.jpg">
 			</div>
 			<p>Вакансии для семейных пар отличаются готовностью работодателя размещать семью в отдельных комнатах или по две пары.</p>
 		</div>
@@ -46,13 +94,13 @@
 	<div class="inspe box">
 		<div class="vakans box inline obrat">
 			<div class="img2">
-				<img src="img/0072da0c889be29709bb4538294a5640_380x150.jpg" alt="" class="block">
+				<img src="Images/0072da0c889be29709bb4538294a5640_380x150.jpg" alt="" class="block">
 			</div>
 			<p class="ins">Деятельность компании <strong>ЮК «Инспе»</strong>, полностью согласована с трудовым законодательством Украины, легальность подтверждена лицензией Министерства труда и социальной политики АЕ № 460337. На нашем сайте вы сможете узнать необходимую информацию касательно нашей работы, мы очень надеемся, что она будет полезна вам и наш труд будет оценен вами по достоинству.</p>
 		</div>
 		<div class="vakans rab box obrat">
 			<div class="img2">
-				<img src="img/89e72466b857dd2962f0853a7fcd57ac_370x150.jpg" width="307" height="150">
+				<img src="Images/89e72466b857dd2962f0853a7fcd57ac_370x150.jpg" width="307" height="150">
 			</div>
 			<p class="ins"><strong>Обратитесь к нам за:</strong>
 				<ul class="text">
@@ -66,7 +114,7 @@
 		</div>
 		<div class="vakans rab box obrat" id="scrol">
 			<div class="img2">
-				<img src="img/rabota.jpg" width="307" height="150">
+				<img src="Images/rabota.jpg" width="307" height="150">
 			</div>
 			<p class="ins"><strong>Вакансии за границей</strong>
     			<ul class="text">
@@ -115,5 +163,12 @@
 		</p>
 </div>
 </main>
-<!--#insert file="-footer.html"-->
+
+<div class="wrap">
+	<hr>
+	<a href="index.html">Главная </a>&nbsp; &nbsp;
+    <a href="https://yadi.sk/d/OH8XJu6kkuJCM" target="_blank">Документы</a>&nbsp; &nbsp;
+    <a href="O nas.html">О нас</a>&nbsp; &nbsp;
+    <a href="Contacts.html">Контакты</a>&nbsp;&nbsp;
+    <a href="Video.html">Видео</a></div><br>
 </body>
