--- a/dev/-header.html
+++ b/dev/-header.html
@@ -12,10 +12,38 @@
 		<ul>
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="https://yadi.sk/d/OH8XJu6kkuJCM" target="_blank">Документы</a></li>
-			<li><a href="#">О нас</a></li>
-			<li><a href="#">Контакты</a></li>
-			<li><a href="#">Видео</a></li>
+			<li><a href="O nas.html">О нас</a></li>
+			<li><a href="Contacts.html">Контакты</a></li>
+			<li><a href="Video.html">Видео</a></li>
 		</ul>
 	</nav>
 	</div>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter32994574 = new Ya.Metrika({
+                    id:32994574,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/32994574" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </header>
