--- a/dev/-section.html
+++ b/dev/-section.html
@@ -1,5 +1,5 @@
 <div class="section box">
 	<div class="logo-busfor">
-		<a href="https://busfor.ua/" alt="logo busfor.ua" target="_blanc"><img src="/img/busfor.jpg"></a>
+		<a href="https://busfor.ua/" alt="logo busfor.ua" target="_blanc"><img src="./img/busfor.jpg"></a>
 	</div>
 </div>
